@@ -1,3 +1,8 @@
+2008-08-04  Simon Budig  <simon@gimp.org>
+
+	* rsvg-styles.[ch]: fix the handling of the stroke-dashoffset
+	property.
+
 2008-05-23  Tor Lillqvist  <tml@novell.com>
 
 	* tests/samples/artwork.svg: Use "sans-serif" instead of
